--- a/middle_earth/index.html
+++ b/middle_earth/index.html
@@ -17,7 +17,7 @@
 			
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
-
+		<div id="panel"></div>
 		<!--put your external script links here-->
         <script type="text/javascript" src="lib/topojson.js"></script>
         <script type="text/javascript" src="lib/d3.js"></script>
