--- a/middle_earth/index.html
+++ b/middle_earth/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<title></title>
+		<title>Middle Earth</title>
 
 		<!--put your external stylesheet links here-->
 		<link rel="stylesheet" href="css/style.css">
@@ -14,7 +14,18 @@
 
 	<body>
 		<!--put your initial page content here-->
-			
+    <style>
+        #mydiv {
+            background-color: red;
+            width: 100%;
+            margin: 0 auto;
+            height: 20px;
+        }
+    </style>
+
+    <div id="mydiv">
+        Welcome To Middle Earth!    
+        </div>
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
 		<div id="panel"></div>
