--- a/middle_earth/index.html
+++ b/middle_earth/index.html
@@ -16,7 +16,7 @@
 		<!--put your initial page content here-->
     <style>
         #mydiv {
-            background-color: red;
+            background-color:  skyblue;
             width: 100%;
             margin: 0 auto;
             height: 20px;
@@ -24,7 +24,8 @@
     </style>
 
     <div id="mydiv">
-        Welcome To Middle Earth!    
+        Welcome To Middle Earth! Please click on a location's name to learn more!
+        
         </div>
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
