--- a/middle_earth/index.html
+++ b/middle_earth/index.html
@@ -3,9 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<title>Middle Earth</title>
+		<title>A Reader's Guide to Middle Earth</title>
 
 		<!--put your external stylesheet links here-->
+        <link href="https://fonts.googleapis.com/css?family=Macondo+Swash+Caps" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css">
 		<!--[if IE<9]>
 			<link rel="stylesheet" href="css/style.ie.css">
@@ -14,19 +15,13 @@
 
 	<body>
 		<!--put your initial page content here-->
-    <style>
-        #mydiv {
-            background-color:  skyblue;
-            width: 100%;
-            margin: 0 auto;
-            height: 20px;
-        }
-    </style>
+        <div class="hero-image">
+            <div class="hero-text">
+               	<h1>A Reader's Guide to Middle Earth</h1>
+                    <p>This interactive map provides spoiler-free background on the various places of interest in Middle Earth. Simply click on the place name of your choosing to learn more!</p>
+            </div>
+       	</div>
 
-    <div id="mydiv">
-        Welcome To Middle Earth! Please click on a location's name to learn more!
-        
-        </div>
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
 		<div id="panel"></div>
